# qontra

./: '  .gitignore  .gitmodules  CMakeCache.txt  CMakeLists.txt  ISA.md  README.md  \  ]  exec_protean.sh  isa.txt  log  log.txt  rsc_d5_wrep.asm  tmp  tmp.cpp  tmp.txt  tmp2
blossom5/: CMakeLists.txt  PerfectMatching.h
chromobius/: CMakeLists.txt
cmake/: ConfigureOptions.cmake  FindCPLEX.cmake  FindGraphviz.cmake  LinkDependencies.cmake  SetupQontra.cmake  UserConfig.cmake
cmake/executables/: Codegen.cmake  ColorCodes.cmake  Main.cmake  Probius.cmake  Protean.cmake  SSE.cmake  Test.cmake
cytnx/: CMakeLists.txt
dependencies/chromobius/: CMakeLists.txt
dependencies/pymatching/: CMakeLists.txt
dependencies/stim/: CMakeLists.txt
dependencies/stim/src/stim/circuit/: circuit.h
dependencies/stim/src/stim/io/: measure_record_reader.inl
dependencies/stim/src/stim/mem/: simd_bit_table.h  simd_bits.h  simd_bits_range_ref.h
dependencies/stim/src/stim/stabilizers/: tableau_iter.perf.cc
dramsim3/: CMakeLists.txt  libdramsim3.dylib
dramsim3/src/: memory_system.h
include/: astrea.h  benchmark.h  clique.h  decoder.h  decoding_graph.h  defs.h  experiments.h  fleece.h  gulliver.h  hyperion.h  instruction.h  instruction.inl  lilliput.h  linprog.h  mwpm_decoder.h  qec_memory.h  qec_memory.inl  quarch.h  quarch_benchmark.h  quarch_clique.h  quarch_decoder.h  quarch_decoding_graph.h  quarch_defs.h  quarch_gulliver.h  quarch_lilliput.h  quarch_mwpm_decoder.h  quarch_stim_test.h  quarch_syndrome_graph.h  sim.h  stats.h  stim_test.h  stimext.h  tables.h  timer.h  tmr_decoder.h
include/astrea/: simulator 2.h  simulator.h
include/benchmark/: statbench 2.h  statbench.h
include/codegen/: conv.h  convert.h  driver.h  monte_carlo.h  tiling.h
include/decoder/: chromobius.h  chromobius.inl  decoder.h  decoder.inl  mwpm.h  neural.h  pymatching.h  restriction.h  sandwich.h  utils.h  window.h
include/defs/: bijective_map.h  bijective_map.inl  filesystem.h  filesystem.inl  set_algebra.h  timer.h  timer.inl  two_level_map.h
include/eraser/: eraser.h  lattice_graph.h
include/extensions/: cytnx.h
include/fleece/: lattice_graph.h  rtanalysis.h
include/graph/: coupling_graph.h  decoding_graph.h  decoding_graph.inl  dependence_graph.h  dijkstra.h  graph.h  io.h  lattice_graph.h  lattice_prebuilt.h  tanner_graph.h
include/gulliver/: bdc_decoder.h  cache.h  defs.h  experiments.h  memory_hierarchy.h  multi_qubit.h  simulator.h  trial_decoder.h
include/hyperion/: cache.h  multi_qubit.h  simulator.h  trial_decoder.h
include/linprog/: base.h  base.inl  constraints.inl  expressions.inl  manager.h  manager.inl  operations.inl
include/mldh/: astrea.h  block.h  latency_sim.h
include/parsing/: cmd.h  cmd.inl  qask.h  qask.inl
include/placc/: cx.h  fpn.h  tree.h
include/protean/: compiler.h  defs.h  experiments.h  io.h  io.inl  network.h  network.inl  proc3d.h  representation.h  scheduler.h  scheduler.inl  tanner_graph.h  utils.h  visualization.h  visualization_attr.h  visualization_impl.inl  visualization_lp.h  visualization_lp.inl  yield_sim.h
include/qontra/: README.md  decoder.h  decoder.inl  defs.h  experiments.h  experiments.inl  graph.h  graph.inl  hypergraph.h  hypergraph.inl  isa.h  isa.inl  tables.h  tables.inl
include/sim/: clifford_sim.h  control_sim.h  enumerator.h  frame_sim.h  frame_sim.inl  frame_sim_gate_impl.h  manager.h  memory_sim.h  state_sim.h  state_sim.inl  universal_sim.h
include/window/: adaptive.h  wrapper.h
main/: asm_analyzer.cpp  compute_circuit_distance.cpp  compute_code_distance.cpp  converter.cpp  decoder_debugger.cpp  error_stats.cpp  explain_degenerate_errors.cpp  generate_syndromes.cpp  memory.cpp  print_error_stats.cpp  qes_validate.cpp  qontrasim.cpp  sim_sc_sgate_inject.cpp  syndromes.cpp
main/codegen/: sc_make.cpp
main/color_codes/: capacity.cpp  debugger.cpp  fpnmake.cpp  gen.h  gen.inl  make_code.cpp  mat2.cpp
main/probius/: tracer.cpp
main/protean/: main.cpp
main/sse/: memory.cpp
pymatching/: CMakeLists.txt
pymatching/.github/workflows/: .ci 2.yml.icloud
python/: gulliver_data_io.py  gulliver_plot_experiments.py  svittal_plotlib.py
sbatch/: compile 2.sbatch  memory 2.sbatch  memory.sbatch  record.sbatch  timing.sbatch
scripts/: asm_gen_base.py  asm_gen_color_code.py  make_color_code_asm.sh  probius_all.sh  probius_setup.sh  probius_surface_code_memory.sh  threshold_color_code.sh  threshold_color_code_full.sh  threshold_color_code_mini.sh
scripts/probius/: rsc_memory_always_lrcs_dqlr.sh  rsc_memory_always_lrcs_swaps.sh  rsc_memory_base.sh  rsc_memory_decode_base.sh  rsc_memory_eraser_dqlr.sh  rsc_memory_eraser_swaps.sh  rsc_memory_leakage_no_lrcs.sh  rsc_memory_no_leakage.sh  rsc_memory_optimal_lrcs_dqlr.sh  rsc_memory_optimal_lrcs_swaps.sh  rsc_memory_tracer_base.sh
scripts/protean/: compute_ber_5e-4_1e-3.sh  compute_ber_5e-4_1e-3_all.sh  compute_ber_5e-4_1e-3_noslurm.sh  eval_decoders.sh  evals.py  make_all_arch.sh  make_arch.py  make_arch.sh  make_arch_all.sh  make_arch_evals.sh  make_arch_large.sh  make_nn.sh  plots.ipynb  print_ler_curve.py  run_memory.py  (+6 more)
slurm/: pace_request_interactive.sh  pace_write_slurm_header.sh
src/: astrea.cpp  benchmark.cpp  clique.cpp  decoder.cpp  decoding_graph.cpp  defs.cpp  experiments.cpp  fleece.cpp  gulliver.cpp  hyperion.cpp  instruction.cpp  lilliput.cpp  main.cpp  memory_experiment.cpp  mwpm_decoder.cpp  quarch_benchmark.cpp  quarch_clique.cpp  quarch_decoder.cpp  quarch_decoding_graph.cpp  quarch_defs.cpp  quarch_gulliver.cpp  quarch_lilliput.cpp  quarch_main.cpp  quarch_mwpm_decoder.cpp  quarch_stim_test.cpp  sim.cpp  stats.cpp  stim_test.cpp  tables.cpp  tmr_decoder.cpp
stim/: CMakeLists.txt
stim/src/stim/circuit/: gate_data.h  gate_data_annotations.cc  gate_data_noisy.cc
stim/src/stim/io/: sparse_shot.h
stim/src/stim/mem/: simd_bit_table.cc  simd_bit_table.h  simd_bits_range_ref.h  simd_compat.h  simd_compat_polyfill.h
stim/src/stim/simulators/: detection_simulator.cc  detection_simulator.h  error_analyzer.cc  frame_simulator.cc  frame_simulator.h
(+398 files in other folders)
